--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
     <li><a href="recipes/lasagne.html">Lasagne</a></li>
-    <li><a href="recipes/pizza-cups.html"></a></li>
+    <li><a href="recipes/pizza-cups.html">Pizza Cups</a></li>
     </ul>
 </body>
 </html>
